--- a/config/MORFEO/params_morfeo_full.yml
+++ b/config/MORFEO/params_morfeo_full.yml
@@ -424,6 +424,7 @@ iir_lgs:
 
 modal_combination:
   class:        'LinearCombination'
+  simul_params_ref:  'main'
   inputs:
     in_vectors_list: ['iir_lgs.out_comm', 'iir_focus.out_comm', 'iir_lift.out_comm', 'iir_ngs.out_comm']
   outputs: ['out_vector']
@@ -561,14 +562,14 @@ tomo_polc_ref:
     in_commands:            'control_ref.out_comm:-1'
   outputs:  ['out_modes', 'out_pseudo_ol_modes']
 
-# Not used.
-iir_ref:
-  class:             'IirFilter'
-  simul_params_ref:  'main'
-  iir_filter_data_object: 'int0.0_293modes'
-  inputs:
-      delta_comm: 'tomo_polc_ref.out_modes'     
-  outputs:  ['out_comm']
+# Commenting since this is not used.
+# iir_ref:
+#   class:             'IirFilter'
+#   simul_params_ref:  'main'
+#   iir_filter_data_object: 'int0.0_293modes'
+#   inputs:
+#       delta_comm: 'tomo_polc_ref.out_modes'
+#   outputs:  ['out_comm']
 
 control_ref: 
   class:             'Integrator'
