(FRO) Fixing scao override for leonardo.

--- a/config/scao/params_scao_mpi_override.yml
+++ b/config/scao/params_scao_mpi_override.yml
@@ -19,6 +19,10 @@ pupilstop_override:
   target_rank: 0
 
 # works
+pupilstop_override:
+  target_rank: 1
+
+# works
 prop_override:
   target_rank: 1
 
