--- a/config/leonardo/overrides/ov_MORFEO_leonardo_spread.yml
+++ b/config/leonardo/overrides/ov_MORFEO_leonardo_spread.yml
@@ -65,6 +65,7 @@ slopec_ref2_override: { target_device_idx: 1, target_rank: 13 }
 slopec_ref3_override: { target_device_idx: 2, target_rank: 14 }
 
 tomo_ngs_override: { target_device_idx: 3, target_rank: 7 }
+iir_ngs_override: { target_device_idx: 3, target_rank: 7 }
 iir_focus_override: { target_device_idx: 3, target_rank: 7 }
 subtract_ref_override: { target_device_idx: 3, target_rank: 7 }
 
