(FRO) Several changes to leonardo configurations, some reodiring of objects in params files, some improvements to the diagrams, some other minor fix.

--- a/config/leonardo/overrides/ov_scao_leonardo.yml
+++ b/config/leonardo/overrides/ov_scao_leonardo.yml
@@ -1,3 +1,6 @@
+main_override:
+  total_time:      0.100
+
 # works
 #seeing_override:
 #  target_rank: 1
@@ -53,7 +56,6 @@ sh_override:
 # works
 #psf_override:
 #  target_rank: 1
-
 
 # not sure it works
 #data_store_override:
