--- a/config/leonardo/overrides/ov_ANDES_leonardo.yml
+++ b/config/leonardo/overrides/ov_ANDES_leonardo.yml
@@ -1,3 +1,4 @@
 main_override:
-  root_dir:        '/leonardo_work/try25_rossi/MORFEO_DATA0'         # Root directory for calibration manager
+  root_dir:        '/leonardo_work/try25_rossi/SPECULA/config/ANDES/calib'         # Root directory for calibration manager
   display_server:  false
+  total_time:      0.100
