--- a/config/leonardo/overrides/ov_ERIS_leonardo.yml
+++ b/config/leonardo/overrides/ov_ERIS_leonardo.yml
@@ -1,6 +1,7 @@
 main_override:
   root_dir:        '/leonardo_work/try25_rossi/SPECULA/config/leonardo/calib/ERIS'         # Root directory for calibration manager
   display_server:  false
+  total_time:      0.100
 
 pupilstop_override: {target_device_idx: 0, target_rank: 0}
 sh_lo_override: {target_device_idx: 1, target_rank: 1}
