Leonardo work and more (#390)
* (FRO) Fixing bugs in DataBiffer and AtmoRandomPhase.

* (FRO) Bugs and tests fix

* (FRO) Add parameter to specula to allow step by step execution of the simulation, or advancing by any number of steps at a time.

* (FRO) Reorganizing the config files to run SPECULA on leonardo.

* (FRO) Removing launchers scripts for leonardo.

* (FRO) Fixing scao override for leonardo.

* (FRO) Moving leonrado override file to correct folder.

* (FRO) Updating scao sbatch file.

* (FRO) Overrides for ERIS.

* (FRO) Fixing file name

* (FRO) Removing file

* (FRO) Adding needed spaces in override file.

* (FRO) More work related to running on leonardo.

* (FRO) Fine tuninng leonardo configurations.

* (FRO) Several changes to leonardo configurations, some reodiring of objects in params files, some improvements to the diagrams, some other minor fix.

* (FRO) Removing commented line.

--- a/config/MORFEO/params_morfeo_full.yml
+++ b/config/MORFEO/params_morfeo_full.yml
@@ -15,14 +15,6 @@ main:
   zenithAngleInDeg:  30.0                   # [deg] Airmass correction
   display_server:    true                   # Display server on auto-selected port
 
-data_store:
-  class:             'DataStore'
-  store_dir:         './output'             # Data result directory: 'store_dir'/TN/
-  inputs:    
-    input_list: [ 'ref-control_ref.out_comm',
-                  'psf-psf.out_sr'
-]
-
 
 seeing:
   class:             'WaveGenerator'
@@ -452,14 +444,13 @@ modal_combination:
 #  inputs:
 #    in_value1: 'modal_integrator.out_comm'
 #    in_value2: 'combine_avc.out_value'
-#s  outputs: ['out_value']
+#  outputs: ['out_value']
 
-zerocmd:
-  class:             'WaveGenerator'
-  constant:          0.0
-  vsize:             6263
-  outputs: ['output']
-
+#zerocmd:
+#  class:             'WaveGenerator'
+#  constant:          0.0
+#  vsize:             6263
+#  outputs: ['output']
 
 dm1:
   class:             'DM'
@@ -607,6 +598,14 @@ psf:
   inputs:
       in_ef:  'prop.out_source_on_axis_ef'
   outputs:  ['out_psf', 'out_sr']
+
+
+data_store:
+  class:             'DataStore'
+  store_dir:         './output'             # Data result directory: 'store_dir'/TN/
+  inputs:    
+    input_list: [ 'ref-control_ref.out_comm',
+                  'psf-psf.out_sr']
 
 
 # ---------------
