--- a/config/MORFEO/params_morfeo_small.yml
+++ b/config/MORFEO/params_morfeo_small.yml
@@ -238,6 +238,8 @@ detector_ngs1: &NGS_DETECTOR
   bandw:             330                      # [nm] Sensor bandwidth
   photon_noise:      True                    # activate photon noise
   readout_noise:     True                    # activate readout noise
+  excess_noise:      True                    # activate excess noise
+  excess_delta:      3.33
   readout_level:     2.7                     # readout noise in [e-/pix/frame]
   quantum_eff:       0.382                   # quantum efficiency * total transmission
   inputs:
@@ -267,7 +269,7 @@ tomo_polc_lgs:
   class:              'Modalrec'
   recmat_object:      '20240606_200110.0/recmat'
   projmat_object:     'p20250519_195705.0/projmatAll.fits'
-  intmat_object:      '20250325_000000.0/intmat.fits'
+  intmat_object:      '20250911_000003.0/intmat.fits'
   polc:   true
   input_modes_slice:  [0, 6258]
   in_commands_size:   6269
