--- a/config/ERIS/params_eris.yml
+++ b/config/ERIS/params_eris.yml
@@ -119,6 +119,7 @@ detector_lgs:
   bandw:             300                     # [nm] Sensor bandwidth
   photon_noise:      True                    # activate photon noise
   readout_noise:     True                    # activate readout noise
+  excess_noise:      True                    # activate excess noise
   readout_level:     0.2                     # readout noise in [e-/pix/frame]
   quantum_eff:       0.2916                  # quantum efficiency * total transmission
   inputs:
@@ -164,6 +165,7 @@ detector_lo:
   bandw:             300                     # [nm] Sensor bandwidth
   photon_noise:      True                    # activate photon noise
   readout_noise:     True                    # activate readout noise
+  excess_noise:      True                    # activate excess noise
   readout_level:     0.2                     # readout noise in [e-/pix/frame]
   quantum_eff:       0.2916                  # quantum efficiency * total transmission
   inputs:
