--- a/config/ERIS/params_eris_ngs_ut4pupil.yml
+++ b/config/ERIS/params_eris_ngs_ut4pupil.yml
@@ -1,35 +1,29 @@
 main:
   class:             'SimulParams'
-  root_dir:          './calib/ERIS'         # Root directory for calibration manager  
+  root_dir:          '/raid1/guido/PASSATA/VLT/'         # Root directory for calibration manager  
   pixel_pupil:       160                    # Linear dimension of pupil phase array
-  pixel_pitch:       0.05                   # [m] Pitch of the pupil phase array
+  pixel_pitch:       0.0507375              # [m] Pitch of the pupil phase array
   total_time:        1.000                  # [s] Total simulation running time
   time_step:         0.001                  # [s] Simulation time step
   zenithAngleInDeg:  30.0                   # [deg] Airmass correction
-  display_server:    true                   # Display server on auto-selected port
+  display_server:    false                   # Display server on auto-selected port
 
 
 seeing:
   class:             'WaveGenerator'
-  constant:          0.87                  # ["] seeing value
+  constant:          0.80                   # ["] seeing value
   outputs: ['output']
 
 
 wind_speed:
   class:             'WaveGenerator'
-  constant:          [5.5, 5.5, 5.1, 5.5, 5.6, 5.7, 5.8, 6.0, 6.5, 7.0,
-                      7.5, 8.5, 9.5, 11.5, 17.5, 23.0, 26.0, 29.0, 32.0, 27.0,
-                      22.0, 14.5, 9.5, 6.3, 5.5, 6.0, 6.5, 7.0, 7.5, 8.0,
-                      8.5, 9.0, 9.5, 10.0, 10.0]      # [m/s] Wind speed value
+  constant:          [6.6, 5.9, 5.1, 4.5, 5.1, 8.3, 16.3, 30.2, 34.3, 17.5]      # [m/s] Wind speed value
   outputs: ['output']
 
 
 wind_direction:
   class:             'WaveGenerator'
-  constant:          [0, -180, 0, 0, 90, 180, 0, 0, 0, -180,
-                      0, 0, -90, 0, 90, -180, 90, 0, -90, -90,
-                      0, -90, 0, 0, 180, 180, 0, -180, 90, 0,
-                      0, 180, -90, 90, -90]   # [degrees] Wind direction value
+  constant:          [0,0,0,0,0,90,-90,-90,90,0]   # [degrees] Wind direction value
   outputs: ['output']
 
 
@@ -38,36 +32,31 @@ source_on_axis:
   polar_coordinates:  [0.0, 0.0]           # [arcsec, degrees] source polar coordinates
   magnitude:         8                    # source magnitude
   wavelengthInNm:    768                  # [nm] wavelength
+  zero_point:        1.6995e-08
 
 
 source_ngs:
   class:             'Source'
-  polar_coordinates:  [5.0, 0.0]         # [arcsec, degrees] source polar coordinates
+  polar_coordinates:  [0.0, 0.0]         # [arcsec, degrees] source polar coordinates
   height:            .inf                # Source height [m]
-  magnitude:         14.0                # source magnitude
+  magnitude:         8.0                # source magnitude
   wavelengthInNm:    768                # [nm] wavelength
+  zero_point:        1.6995e-08
+
 
 
 pupilstop:                                 # Default parameters (circular pupil)
   class: 'Pupilstop'
-  simul_params_ref:  'main'
-  mask_diam : 1.                           # pupil mask diameter (relative number)
-  obs_diam : 0.138                         # pupil mask obscuration diameter (relative number)
-
+  tag: 'ut4pupilM3160noLB'
 
 atmo:
   class:                'AtmoEvolution'
   simul_params_ref:  'main'
   L0:                   25                   # [m] Outer scale
-  heights:              [30.0000, 90.0000, 150.000, 200.000, 245.000, 300.000, 390.000, 600.000, 1130.00, 1880.00,
-                         2630.00, 3500.00, 4500.00, 5500.00, 6500.00, 7500.00, 8500.00, 9500.00, 10500.0, 11500.0,
-                         12500.0, 13500.0, 14500.0, 15500.0, 16500.0, 17500.0, 18500.0, 19500.0, 20500.0, 21500.0,
-                         22500.0, 23500.0, 24500.0, 25500.0, 26500.0] # [m] layer heights at 0 zenith angle
-  Cn2:                  [0.241954, 0.119977, 0.0968817, 0.0589889, 0.0472911, 0.0472911, 0.0472911, 0.0472911, 0.0398925, 0.0323939,
-                         0.0161969, 0.0260951, 0.0155971, 0.0103980, 0.00999811, 0.0119977, 0.00400924, 0.0139974, 0.0129975, 0.00700868,
-                         0.0159970, 0.0258951, 0.0190964, 0.00986813, 0.00616883, 0.00400924, 0.00246953, 0.00215959, 0.00184965, 0.00135974,
-                         0.00110979, 0.000616883, 0.000925825, 0.000493907, 0.000431918] # Cn2 weights (total must be eq 1)
+  heights:              [96, 207, 350, 633, 1201, 2336, 4605, 7884, 1117, 14188]
+  Cn2:                  [0.59, 0.02, 0.04, 0.06, 0.01, 0.05, 0.09, 0.04, 0.05, 0.05]
   fov:                  120.0
+  seed:                 5
   inputs:
     seeing: 'seeing.output'
     wind_speed: 'wind_speed.output'
@@ -107,18 +96,22 @@ detector:
   bandw:             400                     # [nm] Sensor bandwidth
   photon_noise:      True                    # activate photon noise
   readout_noise:     True                    # activate readout noise
-  excess_noise:      True                    # activate excess noise
+  excess_noise:      True                    # activate readout noise
+  darkcurrent_noise: True
+  background_noise:  True
   readout_level:     0.2                     # readout noise in [e-/pix/frame]
-  quantum_eff:       0.2916                  # quantum efficiency * total transmission
+  quantum_eff:       0.344                  # quantum efficiency * total transmission
+  darkcurrent_level: 0.00360
+  background_level:  0.000765
   inputs:
     in_i: 'sh.out_i'
   outputs:  ['out_pixels']
 
 slopec:
   class:             'ShSlopec'
+  weightedPixRad:    3
   thr_value:         0
-  subapdata_object:  'eris_subaps'       # subaperture data tag
-  sn_object:         null  # 'auto'         #  slope reference vector
+  subapdata_object:  'eris_M3_noLB_ps160p0.051_shs40x40_wl768_fv2.5_np6_th0.50_chd'       # subaperture data tag
   inputs:
     in_pixels:        'detector.out_pixels'
   outputs:  ['out_slopes']
@@ -126,7 +119,7 @@ slopec:
 
 modalrec:
   class:              'Modalrec'
-  recmat_object:      'eris_rec'              # reconstruction matrix tag
+  recmat_object:      'eris_M3_noLB_ps160p0.051_shs40x40_wl768_fv2.5_np6_th0.50_chd_mn945_ce'              # reconstruction matrix tag
   inputs:
     in_slopes:        'slopec.out_slopes'
   outputs:  ['out_modes']
@@ -138,7 +131,8 @@ integrator:
   class:        'Integrator'
   simul_params_ref:  'main'
   delay:             2                      # Total temporal delay in time steps
-  int_gain_data:     'g0.40_700'            # TODO  
+  int_gain:          [0.40]
+  n_modes:           [945]
   inputs:
       delta_comm: 'modalrec.out_modes'     
   outputs:  ['out_comm']
@@ -146,8 +140,8 @@ integrator:
 dm:
   class:             'DM'
   simul_params_ref:  'main'
-  ifunc_object:      'VLT_ifunc'
-  nmodes:            700
+  ifunc_object:      'VLT_ifunc_160p_M3_noLB_v1'
+  nmodes:            945
   height:            0                        # DM height [m]
   inputs:
       in_command: 'integrator.out_comm'
@@ -162,3 +156,19 @@ psf:
   inputs:
       in_ef:  'prop.out_source_on_axis_ef'
   outputs:  ['out_psf', 'out_sr']
+
+modal_analysis:
+  class: 'ModalAnalysis'
+  ifunc_inv_object: 'VLT_ifunc_160p_M3_noLB_v1_inv'
+  inputs:
+    in_ef: 'prop.out_source_on_axis_ef'
+  outputs: ['out_modes']
+
+data_store:
+  class:             'DataStore'
+  store_dir:         '/raid1/guido/result4comparison/ERIS/'             # Data result directory: 'store_dir'/TN/
+  inputs:
+    input_list: ['resMod-modal_analysis.out_modes',
+                 'deltaComm-modalrec.out_modes',
+                 'comm-integrator.out_comm',
+                 'srRes-psf.out_sr']
