--- a/config/MORFEO/params_morfeo_focus_ref.yml
+++ b/config/MORFEO/params_morfeo_focus_ref.yml
@@ -270,6 +270,8 @@ detector_ngs1: &NGS_DETECTOR
   bandw:             330                     # [nm] Sensor bandwidth
   photon_noise:      True                    # activate photon noise
   readout_noise:     True                    # activate readout noise
+  excess_noise:      True                    # activate excess noise
+  excess_delta:      3.33
   readout_level:     1.0                     # readout noise in [e-/pix/frame]
   quantum_eff:       0.382                   # quantum efficiency * total transmission
   inputs:
@@ -318,6 +320,7 @@ detector_ref1: &REF_DETECTOR
   bandw:             400                     # [nm] Sensor bandwidth
   photon_noise:      True                    # activate photon noise
   readout_noise:     True                    # activate readout noise
+  excess_noise:      True                    # activate excess noise
   readout_level:     0.2                     # readout noise in [e-/pix/frame]
   quantum_eff:       0.400                   # quantum efficiency * total transmission
   inputs:
@@ -348,7 +351,7 @@ tomo_polc_lgs:
   class:              'Modalrec'
   recmat_object:      '20240606_200110.0/recmat' # 35015 modes, Tallon, focus filtered
   projmat_object:     'p20240607_025755.0/projmatAll' # 6564x35015 modes
-  intmat_object:      '20250911_000000.0/intmat' # 6564 modes
+  intmat_object:      '20250911_000002.0/intmat' # 6564 modes
   polc:   true
   input_modes_slice:  [0, 6564] 
   in_commands_size:   6564
