--- a/config/MORFEO/params_morfeo_no_na_no_focus_no_ref.yml
+++ b/config/MORFEO/params_morfeo_no_na_no_focus_no_ref.yml
@@ -257,6 +257,8 @@ detector_ngs1: &NGS_DETECTOR
   bandw:             330                      # [nm] Sensor bandwidth
   photon_noise:      True                    # activate photon noise
   readout_noise:     True                    # activate readout noise
+  excess_noise:      True                    # activate excess noise
+  excess_delta:      3.33
   readout_level:     1.0                     # readout noise in [e-/pix/frame]
   quantum_eff:       0.382                   # quantum efficiency * total transmission
   inputs:
