(FRO) Current status of NN for petal mode estimation.

--- a/config/other/params_atmo_petals_ol.yml
+++ b/config/other/params_atmo_petals_ol.yml
@@ -12,10 +12,10 @@ main:
 
 
 seeing:
-  class:             'FuncGenerator'
+  class:             'RandomGenerator'
   amp:               0.6
   constant:          0.6                  # range of [0.4, 1.2]
-  func_type:         'RANDOM_UNIFORM'
+  distribution:       'UNIFORM'
   outputs: ['output']
 
 
@@ -54,8 +54,8 @@ petals:
   tag: 'ifunc_160p_2petals'
 
 petals_error:
-  class: 'FuncGenerator'
-  func_type: 'RANDOM_UNIFORM'
+  class: 'RandomGenerator'
+  distribution: 'UNIFORM'
   constant: [0.0, 0.0]  # [nm] Average for each petal
   amp: [0.0,1000.0]  # [nm] St. Dev. for each petal
   outputs: ['output']
@@ -64,7 +64,7 @@ dm_petals:
   class:             'DM'
   simul_params_ref:  'main'
   ifunc_ref:         'petals'
-  nmodes:            2                    # Number of modes
+  nmodes:            10                     # Number of modes
   height:            0                      # DM height [m]
   inputs:
     in_command:      'petals_error.output'
@@ -72,7 +72,6 @@ dm_petals:
 
 ef_combinator:
   class: 'ElectricFieldCombinator'
-  simul_params_ref:  'main'
   inputs:
     in_ef1: 'atmo.out_on_axis_source_ef'
     in_ef2: 'dm_petals.out_layer'
@@ -88,7 +87,6 @@ modal_combination:
 
 phase_flat:
   class: 'PhaseFlattening'
-  simul_params_ref:  'main'
   inputs:
     in_ef: 'ef_combinator.out_ef'
   outputs: ['out_ef']
