--- a/config/other/params_atmo_petals_ol_train.yml
+++ b/config/other/params_atmo_petals_ol_train.yml
@@ -14,8 +14,15 @@ data_buffer:
 
 nn_trainer:
   class:             'Conv2dNetTrainer'
-  network_filename:  './other/petal_ol_conv2d.pth'
-  nmodes: 10
+  network_filename:  './other/PosterPiston/models/depth5/petal_ol_conv2d_cvtype3_m6_ch64_dp0.000.pth'
+  load_from_file: true
+  conv_block_type : 3
+  depth: 5
+  nmodes: 6
+  epoch_len: 20
+  dropout: 0.0
+  patience: 500
+  channels: 64
   inputs:
     input_2d_batch: 'data_buffer.phase_and_petals_buffered'
     labels: 'data_buffer.modes_buffered'
