--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -1,68 +1,58 @@
-# This workflow will install Python dependencies, run tests and lint with a variety of Python versions
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
-
-name: Python package
+name: Release
 
 on:
-  push:
-    branches: [ main ]
   pull_request:
-    branches: [ main ]
-#  schedule:
-#    - cron: "1 1 * * *"
-
+  push:
+    tags:
+      - "*"
 
 jobs:
-  build:
+  build-n-publish:
+    name: Build and publish Python 🐍 distributions 📦
+    runs-on: ubuntu-latest
 
-    runs-on: ${{ matrix.os }}
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [ubuntu-latest, macos-latest]
-        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12", "3.13"]
+    # Run only on:
+    # - tag pushes
+    # - PRs with label "Build wheels"
+    if: >
+      (github.event_name == 'push' && startsWith(github.ref, 'refs/tags')) ||
+      contains(toJson(github.event.pull_request.labels), 'Build wheels')
 
     steps:
-    - uses: actions/checkout@v4
-      with:
-        fetch-depth: 0
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
 
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v5
-      with:
-        python-version: ${{ matrix.python-version }}
+      - uses: actions/setup-python@v4
+        with:
+          python-version: "3.11"
 
+      - name: Install python-build and twine
+        run: python -m pip install build twine
 
-    - name: Install dependencies
-      run: |
-        bash
-        if ${{runner.os == 'Linux'}}; then
-          sudo apt update
-          sudo apt install libcairo2-dev pkg-config python3-dev
-        fi
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        pip install pytest pytest-cov flake8
+      - name: Build package
+        run: python -m build --sdist --wheel .
 
-    - name: Lint with flake8
-      run: |
-        # stop the build if there are Python syntax errors or undefined names
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+      - name: List result
+        run: ls -l dist
 
-    - name: Test with pytest and generate coverage report
-      run: |
-        pytest --cov=./ --cov-report=xml
-
-    - name: Upload coverage to Codecov
-      if: matrix.os == 'ubuntu-latest' && matrix.python-version == '3.12'
-      uses: codecov/codecov-action@v4
-      with:
-        token: ${{ secrets.CODECOV_TOKEN }}
-        file: ./coverage.xml
-        flags: unittests
-        override_branch: ${{ github.head_ref || github.ref_name }}
-        override_commit: ${{ github.sha }}
-        fail_ci_if_error: false
-        verbose: true
+      # ----------------------------------------
+      # Publish to TestPyPI for pre-release tags (USA TOKEN GLOBALE TEMPORANEO)
+      # ----------------------------------------
+      - name: Publish pre-release 📦 to TestPyPI
+        if: startsWith(github.ref, 'refs/tags') && contains(github.ref, '-')
+        uses: pypa/gh-action-pypi-publish@release/v1
+        with:
+          repository-url: https://test.pypi.org/legacy/
+          user: __token__
+          password: ${{ secrets.TEST_PYPI_TOKEN }} 
+          
+      # ----------------------------------------
+      # Publish to PyPI for final releases (USA TOKEN GLOBALE TEMPORANEO)
+      # ----------------------------------------
+      - name: Publish distribution 📦 to PyPI
+        if: startsWith(github.ref, 'refs/tags') && !contains(github.ref, '-')
+        uses: pypa/gh-action-pypi-publish@release/v1
+        with:
+          user: __token__
+          password: ${{ secrets.PYPI_TOKEN }}
