--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,62 +1,39 @@
 name: Release
-
 on:
   pull_request:
   push:
     tags:
       - "*"
-
 jobs:
   build-n-publish:
     name: Build and publish Python 🐍 distributions 📦
     runs-on: ubuntu-latest
-
     permissions:
-      id-token: write  # Necessario per generare il token OIDC
-      contents: read   # Permesso standard per il checkout
-
-    # Run only on:
-    # - tag pushes
-    # - PRs with label "Build wheels"
+      contents: read
     if: >
       (github.event_name == 'push' && startsWith(github.ref, 'refs/tags')) ||
       contains(toJson(github.event.pull_request.labels), 'Build wheels')
-
     steps:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-
       - uses: actions/setup-python@v4
         with:
           python-version: "3.11"
-
       - name: Install python-build and twine
         run: python -m pip install build twine
-
       - name: Build package
         run: python -m build --sdist --wheel .
-
       - name: List result
         run: ls -l dist
-
-      # ----------------------------------------
-      # Publish to TestPyPI for pre-release tags
-      # ----------------------------------------
       - name: Publish pre-release 📦 to TestPyPI
         if: startsWith(github.ref, 'refs/tags') && contains(github.ref, '-')
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
           repository-url: https://test.pypi.org/legacy/
-          user: __token__
           password: ${{ secrets.TEST_PYPI_TOKEN }}
-
-      # ----------------------------------------
-      # Publish to PyPI for final releases
-      # ----------------------------------------
       - name: Publish distribution 📦 to PyPI
         if: startsWith(github.ref, 'refs/tags') && !contains(github.ref, '-')
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
-          user: __token__
           password: ${{ secrets.PYPI_TOKEN }}
