--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -26,16 +26,28 @@ jobs:
         run: python -m build --sdist --wheel .
       - name: List result
         run: ls -l dist
+      #- name: Publish pre-release 📦 to TestPyPI
+      #  if: startsWith(github.ref, 'refs/tags') && contains(github.ref, '-')
+      #  uses: pypa/gh-action-pypi-publish@release/v1
+      #  with:
+      #    repository-url: https://test.pypi.org/legacy/
+      #    password: ${{ secrets.TEST_PYPI_TOKEN }}
+      #    verbose: true
       - name: Publish pre-release 📦 to TestPyPI
         if: startsWith(github.ref, 'refs/tags') && contains(github.ref, '-')
-        uses: pypa/gh-action-pypi-publish@release/v1
-        with:
-          repository-url: https://test.pypi.org/legacy/
-          password: ${{ secrets.TEST_PYPI_TOKEN }}
-          verbose: true
+        env:
+          TWINE_USERNAME: __token__
+          TWINE_PASSWORD: ${{ secrets.TEST_PYPI_TOKEN }}
+        run: python -m twine upload --repository testpypi dist/*
+      #- name: Publish distribution 📦 to PyPI
+      #  if: startsWith(github.ref, 'refs/tags') && !contains(github.ref, '-')
+      #  uses: pypa/gh-action-pypi-publish@release/v1
+      #  with:
+      #    password: ${{ secrets.PYPI_TOKEN }}
+      #    verbose: true
       - name: Publish distribution 📦 to PyPI
         if: startsWith(github.ref, 'refs/tags') && !contains(github.ref, '-')
-        uses: pypa/gh-action-pypi-publish@release/v1
-        with:
-          password: ${{ secrets.PYPI_TOKEN }}
-          verbose: true
+        env:
+          TWINE_USERNAME: __token__
+          TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
+        run: python -m twine upload dist/*
