--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -26,14 +26,8 @@ jobs:
         run: python -m build --sdist --wheel .
       - name: List result
         run: ls -l dist
-      - name: Publish pre-release 📦 to TestPyPI
-        if: startsWith(github.ref, 'refs/tags') && (contains(github.ref, 'a') || contains(github.ref, 'b') || contains(github.ref, 'rc') || contains(github.ref, '-'))
-        env:
-          TWINE_USERNAME: __token__
-          TWINE_PASSWORD: ${{ secrets.TEST_PYPI_TOKEN }}
-        run: python -m twine upload --repository testpypi dist/*
       - name: Publish distribution 📦 to PyPI
-        if: startsWith(github.ref, 'refs/tags') && !contains(github.ref, 'a') && !contains(github.ref, 'b') && !contains(github.ref, 'rc') && !contains(github.ref, '-')
+        if: startsWith(github.ref, 'refs/tags')
         env:
           TWINE_USERNAME: __token__
           TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
