--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -10,6 +10,10 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: read
+      id-token: write  # OIDC AUTHENTICATION
+    # Run only on:
+    # - tag pushes
+    # - PRs with label "Build wheels"
     if: >
       (github.event_name == 'push' && startsWith(github.ref, 'refs/tags')) ||
       contains(toJson(github.event.pull_request.labels), 'Build wheels')
@@ -28,7 +32,5 @@ jobs:
         run: ls -l dist
       - name: Publish distribution 📦 to PyPI
         if: startsWith(github.ref, 'refs/tags')
-        env:
-          TWINE_USERNAME: __token__
-          TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
-        run: python -m twine upload dist/*
+        uses: pypa/gh-action-pypi-publish@release/v1
+        with:
