(GA) SynIM dependency, SPRINT estimator, Interaction Matrix Generator, vectorized version of demodulate_signal (#489)

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,8 @@ scipy
 astropy
 matplotlib
 symao >= 1.0.1
-astro-seeing>=1.1
+astro-seeing >= 1.1
+synim >= 1.0.0
 flask-socketio
 python-socketio
 requests
